# ROS

./: .gitignore
ros_webcam/: CMakeLists.txt  package.xml
ros_webcam/src/: webcam.cpp
src/: CMakeLists.txt
src/ros_signals/: CMakeLists.txt  package.xml
src/ros_signals/include/: killerNode.hpp  runnerNode.hpp
src/ros_signals/launch/: ros_signals.launch
src/ros_signals/msg/: pid.msg
src/ros_signals/src/: killerNode.cpp  runnerNode.cpp
src/ros_threads/: CMakeLists.txt  package.xml
src/ros_threads/include/ros_threads/: threads_client.hpp  threads_server.hpp
src/ros_threads/launch/: ros_threads.launch
src/ros_threads/src/: threads_client.cpp  threads_server.cpp
src/ros_threads/srv/: unix_time_now.srv
src/ros_transframes/: CMakeLists.txt  package.xml
src/ros_transframes/include/ros_transframes/: tf_publisher_base.hpp  tf_receiver_translator.hpp
src/ros_transframes/msg/: Num.msg
src/ros_transframes/src/: main.cpp  tf_publisher_base.cpp  tf_publisher_base_main.cpp  tf_receiver_translator.cpp  tf_receiver_translator_main.cpp
src/ros_webcam/: CMakeLists.txt  package.xml
src/ros_webcam/include/: snapshot.hpp  webcam.h  webcam.hpp
src/ros_webcam/launch/: ros_webcam.launch
src/ros_webcam/src/: snapshot.cpp  webcam.cpp
